2008-01-26  Zoltan Varga  <vargaz@gmail.com>

	* nonvirt.cs: Removed, moved to mini/exceptions.cs.

2008-01-24  Jonathan Chambers  <joncham@gmail.com>

	* libtest.c: Allocate memory for out string parameters.

	* pinvoke2.cs: Add tests for marshalling strings as out paramters.

	Code is contributed under MIT/X11 license.

2008-01-08  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (DISABLED_TESTS): Disable bug-77127.exe for now to make the
	build green.

2008-01-04  Dick Porter  <dick@ximian.com>

	* Makefile.am: Make it work on automake-1.6

2007-12-31  Rodrigo Kumpera  <rkumpera@novell.com>

	* invalid-token.il, Makefile.am: Add test for loading
	invalid tokens.

2007-12-20  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am: Enable the async-exc-compilation test on x86/amd64.

2007-12-17  Mark Probst  <mark.probst@gmail.com>

	* thread-exit.cs, Makefile.am: Test case for #347676.

2007-12-09  Robert Jordan  <robertj@gmx.net>

	* bug-323114.cs: Add test case for #323114.

2007-12-07  Zoltan Varga  <vargaz@gmail.com>

	* pinvoke2.cs: Fix the names of two tests.

	* checked.cs: Make exit codes positive.

2007-12-05  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (EXTRA_DIST): Add a missing file.

2007-12-03  Zoltan Varga  <vargaz@gmail.com>

	* async-exc-compilation.cs: New not yet enabled test for async exceptions
	received during JIT compilation.

	* custom-modifiers.2.cs custom-modifiers-il.cs: New test for the 2.0
	GetRequiredCustomModifiers ()/GetOptionalCustomModifiers () methods.

2007-11-30  Zoltan Varga  <vargaz@gmail.com>

	* stackframes-async.2.cs: Fix this test to work with the new delegate optimization.

2007-11-23  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am: Add a target for testing aot on the 2.0 profile.

2007-11-12  Zoltan Varga  <vargaz@gmail.com>

	* invoke.cs: Add tests for invoking the Array Get/Set methods.

2007-11-12 Rodrigo Kumpera  <rkumpera@novell.com>

	* bug-322722_patch_bx.2.cs : Added test for bug #322722.
